tests/negative/parse_unclosed_paren.uzpp
// XATOLIK_KUTILMOQDA: parse: yopilmagan qavs funksiya parametrlarida
ulash "uzpp_runtime.hpp"
butun asosiy(
    qaytarish 0;
}
